<resources>
    <string name="app_name">Cipher</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="execute">Execute</string>
    <string-array name="choice_encrypt">
        <item>Image Encryption</item>
        <item>Text Encryption</item>
        <item>Video Encryption</item>
        <item>Scale of notation</item>
        <item>Secret chat</item>
    </string-array>
    <string-array name="choice_type_cipher">
        <item>AES/CBC/PKCS5Padding</item>
        <item>AES/GCM/NoPadding</item>
        <item>CIPHER-1</item>
        <item>CIPHER-2</item>
        <item>Base64</item>
        <item>My vendor</item>
    </string-array>
    <string-array name="choice_type_image">
        <item>AES/CBC/PKCS5Padding</item>
        <item>AES/GCM/NoPadding</item>
        <item>CIPHER-IMAGE</item>
        <item>My vendor</item>
    </string-array>
    <string-array name="folder_type">
        <item>AES/CBC/PKCS5Padding</item>
        <item>AES/GCM/NoPadding</item>
        <item>CIPHER-2</item>
    </string-array>
    <string name="type">Type</string>
    <string name="code">Code</string>
    <string name="code_room">Code Room</string>
    <string name="enter">Enter text</string>
    <string name="output">Output</string>
    <string name="input">Input</string>
    <string name="translate">Translate</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Text</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Password</string>
    <string name="menu_scale">Scale</string>
    <string name="menu_chat">Chat</string>
    <string name="name">Name</string>
    <string name="cipher">Cipher</string>
    <string name="task">Task completed</string>
    <string name="click">Click to watch</string>
    <string name="image">Image</string>
    <string name="inprogress">Successfully! This may take some time. We will notify you upon completion.</string>
    <string name="copied">Copied!</string>
    <string name="ops">Oops! Something went wrong!</string>
    <string name="will">The cipher text will be here</string>
    <string name="long_txt">The text is too large, click the save button to create a file with content inside</string>
    <string name="secret">*secret content*</string>
    <string name="success">Success!</string>
    <string name="invalid">Invalid or unsupported format</string>
    <string name="check">Check the integrity of the input</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="error">An error occurred while decrypting</string>
    <string name="defaultType">Default encryption</string>
    <string name="defaultKey">Default key</string>
    <string name="store">Store the key inside the file</string>
    <string name="first">First default value</string>
    <string name="second">Second default value</string>
    <string name="defaultRoom">Default room name</string>
    <string name="defaultName">Default name</string>
    <string name="defaultCode">Default code</string>
    <string name="bug">Found a bug? sup.alone.port@gmail.com</string>
    <string name="length">Password length</string>
    <string name="number">Number of lines</string>
    <string name="max">Maximum length 32. Installed 32</string>
    <string name="check2">Error! A file with the same name (key) probably already exists</string>
    <string name="directory">Protect folder</string>
    <string name="create">Create as copy</string>
    <string name="select">Select</string>
    <string name="error_folder">An error has occurred! Check for a "/Download" folder on your device</string>
    <string name="method_vendor">Enter method here</string>
    <string name="length_vendor">Enter key length here</string>
    <string name="fill_text">Fill in the fields for text encryption</string>
    <string name="fill_image">Fill in the fields for image encryption</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="tested">View tested encryption methods</string>
    <string name="method1">Input length must be a multiple of 16 bytes</string>
    <string name="method2">Text length from 16 characters!</string>
    <string name="method3">The length of the text must be divisible by 8</string>
</resources>