<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.text.TextFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.5"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/translate"
            android:hint="@string/will"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/copy_24"
            android:layout_gravity="right"
            android:id="@+id/copy_translate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:weightSum="3.5">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/input"
            android:hint="@string/enter"
            android:maxHeight="150dp"
            android:layout_weight="3.5"
            android:inputType="textMultiLine"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copy_input"
            android:src="@drawable/copy_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3.5"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/code"
            android:maxHeight="50dp"
            android:layout_weight="3.5"
            android:hint="@string/code"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/random_24"
            android:id="@+id/random_code"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/copy_24"
            android:id="@+id/copy_code"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:weightSum="3.5">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/encrypt"
            android:layout_weight="3.5"
            android:text="@string/encrypt"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decrypt"
            android:text="@string/decrypt"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/execute"
        android:id="@+id/execute"/>

</LinearLayout>