<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.chat.ChatFragment"
    android:orientation="vertical"
    android:weightSum="3.3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="horizontal"
        android:weightSum="3">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/code_room"
            android:id="@+id/code_room"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/name"
            android:hint="@string/name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cipher"
            android:layout_weight="1"
            android:hint="@string/cipher"/>
    </LinearLayout>

    <ListView
        android:layout_weight="3.2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rec"
        android:divider="@null"
        tools:listitem="@layout/constructor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="2.4">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_weight="2"
            android:id="@+id/inputChat"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/send"
            android:layout_weight="0.4"
            android:src="@drawable/send_24"/>
    </LinearLayout>

</LinearLayout>